removed callbackURL from forgot-password, and implemented environment variables for reset-password-url and verify-email-url
